--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Hidden Word</string>
+    <string name="start">Let\'s Play</string>
+    <string name="instructions">Instructions</string>
+    <string name="exit">Exit</string>
 </resources>
