Display Could be used characters

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="exit">Exit</string>
     <string name="restart">Restart</string>
     <string name="challenge">Challenge</string>
+    <string name="menu_sound">Sound</string>
 </resources>
